--- a/demo/templates/homepage.mustache
+++ b/demo/templates/homepage.mustache
@@ -1,7 +1,7 @@
 <h1>Welcome to my homepage!</h1>
 
 {{#name}}
-<h2>Oh hey {{name}}!</h2>
+{{> greeting}}
 {{/name}}
 
 <p>Glad you could make it! Take off your coat and stay a while!</p>
