--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,16 +4,43 @@
 	<title>Owl :: A PHP View Library</title>
 
 	<meta charset="utf-8" />
+	<meta name="author" content="Dave Widmer" />
+	<meta name="keywords" content="Owl, PHP, View Library, Mustache" />
+	<meta name="description" content="Owl, A PHP View Library with a Mustache Renderer" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<link rel="stylesheet" type="text/css" href="assets/style.css" />
 </head>
 <body>
-	<header>
-		Header info
-	</header>
-	<section class="content">
-		{{ content }}
-	</section>
-	<footer>
-		Footer info
-	</footer>
+	<div class="container">
+		<header>
+			<div class="row">
+				<div class="span4">
+					<h1 class="headline"><a href="index.html">Owl</a></h1>
+				</div>
+				<div class="span8">
+					<nav>
+						<ul class="navigation">
+							<li><a href="index.html">Home</a></li>
+							<li><a href="download.html">Download</a></li>
+							<li><a href="api/current/index.html">API</a></li>
+							<li><a href="https://github.com/davewid/owl">Contribute</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</header>
+		<section class="content">
+			{{ content }}
+		</section>
+		<footer>
+			<div class="row">
+				<div class="span12 pad top-line">
+					Developed by <a href="http://www.davewidmer.net">Dave Widmer</a> &copy; 2012-2013 |
+					Owl sketch by <a href="http://scootsketches.blogspot.com/">Scott McMahon</a>.
+				</div>
+			</div>
+		</footer>
+	</div>
 </body>
 </html>
