Updating the composer include section

--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -109,3 +109,9 @@ footer {
 .large {
 	font-size: 2em;
 }
+
+.code {
+	padding: 1em;
+	background-color: $colorLightBlue;
+	font-family: 'Droid Mono', Consolas, monospace;
+}
