--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,10 +15,10 @@
 	<div class="container">
 		<header>
 			<div class="row">
-				<div class="span4">
+				<div class="span2">
 					<h1 class="headline"><a href="index.html">Owl</a></h1>
 				</div>
-				<div class="span8">
+				<div class="span10">
 					<nav>
 						<ul class="navigation">
 							<li><a href="index.html">Home</a></li>
@@ -36,8 +36,8 @@
 		<footer>
 			<div class="row">
 				<div class="span12 pad top-line">
-					Developed by <a href="http://www.davewidmer.net">Dave Widmer</a> &copy; 2012-2013 |
-					Owl sketch by <a href="http://scootsketches.blogspot.com/">Scott McMahon</a>.
+					Developed by <a href="http://www.davewidmer.net">Dave Widmer</a> &copy; 2012-2013<br />
+					Owl sketch by <a href="http://scootsketches.blogspot.com/">Scott McMahon</a>
 				</div>
 			</div>
 		</footer>
