--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -115,3 +115,30 @@ footer {
 .air-out > li {
 	margin: 0.5em 0;
 }
+
+@media (max-width: 768px) {
+	nav {
+		.navigation {
+			@include translate(0, 0, 0);
+		}
+	}
+}
+
+@media (max-width: 450px) {
+	nav {
+		.navigation {
+			text-align: left;
+
+			& > li {
+				margin: 0 0 0 1em;
+
+				a {
+					border-radius: 0.5em;
+				}
+			}
+		}
+
+		padding-bottom: 1em;
+	}
+}
+
