--- a/assets/style.css
+++ b/assets/style.css
@@ -261,3 +261,9 @@ footer .pad { padding-bottom: 0; }
 .code { padding: 1em; background-color: #e5f5ff; font-family: "Droid Mono", Consolas, monospace; }
 
 .air-out > li { margin: 0.5em 0; }
+
+@media (max-width: 768px) { nav .navigation { -webkit-transform: translate3d(0, 0, 0); -moz-transform: translate3d(0, 0, 0); -o-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); } }
+@media (max-width: 450px) { nav { padding-bottom: 1em; }
+  nav .navigation { text-align: left; }
+  nav .navigation > li { margin: 0 0 0 1em; }
+  nav .navigation > li a { border-radius: 0.5em; } }
