--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -134,7 +134,7 @@ footer {
 			text-align: left;
 
 			& > li {
-				margin: 0 0 0 1em;
+				margin: 0 1em 0.5em 0;
 
 				a {
 					border-radius: 0.5em;
