--- a/assets/style.css
+++ b/assets/style.css
@@ -267,5 +267,5 @@ footer .pad { padding-bottom: 0; }
 @media (max-width: 768px) { nav .navigation { -webkit-transform: translate3d(0, 0, 0); -moz-transform: translate3d(0, 0, 0); -o-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); } }
 @media (max-width: 450px) { nav { padding-bottom: 1em; }
   nav .navigation { text-align: left; }
-  nav .navigation > li { margin: 0 0 0 1em; }
+  nav .navigation > li { margin: 0 1em 0.5em 0; }
   nav .navigation > li a { border-radius: 0.5em; } }
