--- a/assets/style.css
+++ b/assets/style.css
@@ -242,7 +242,7 @@ footer .pad { padding-bottom: 0; }
 
 .pad { padding: 1em; }
 
-.unpad { padding: 0; }
+.shrink { padding: 0; margin: 0; }
 
 .top-line { border-top: 1px solid lightgrey; }
 
